# DataScienceProject

./: .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  pyproject.toml  requirements.txt  template.py
.dvc/: config
artifacts/model_evaluation/: metrics.json
artifacts/model_trainer/: model.joblib
config/: config.yaml
research/: 1 data_ingestion.ipynb  2 data_validation.ipynb  3 data_transformation.ipynb  4 model_trainer.ipynb  5 model_evaluation.ipynb  research.ipynb
src/datascience/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/datascience/entity/: config_entity.py
src/datascience/pipeline/: 01_data_ingestion.py  data_ingestion.py  data_transformation_pipeline.py  data_validation.py  model_evaluation.py  model_trainer.py  predict_pipeline.py
src/datascience/utils/: common.py  configuration.py
templates/: index.html  results.html
